# poetry_docker_test

./: README.md  pyproject.toml  requirements.txt  sql_app.db
.devcontainer/: Dockerfile
.github/workflows/: server.yml
sql_app/: crud.py  database.py  schemas.py
src/: app.py  main.py
src/sql_app/: crud.py  models.py
tests/: test_main.py
