[tool.poetry]
name = "poetry-docker-test"
version = "0.1"
description = "poetry docker test"
authors = ["YoshitakaKyougoku <114034035+YoshitakaKyougoku@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "poetry_docker_test"},
    {include = "src"},
    {include = "sql_app"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
pytest = "^7.4.0"
httpx = "^0.24.1"
sqlalchemy = "^2.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
